# minecraft-asset-explorer

./: .gitignore  README.md  index.html  package.json
scripts/: build-release.mjs  collect-release-artifacts.mjs  tauri-zigbuild-runner.sh
scripts/docker/: linux-builder.Dockerfile
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AssetListPanel.tsx  ContentOverlay.tsx  PreviewPanel.tsx  StatusStrip.tsx  TopBar.tsx  TreePanel.tsx  index.ts
src/types/: assets.ts
src/utils/: jsonPreview.tsx
